k8s/overlays/dev/client-replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-client-deployment
spec:
  replicas: 1
