k8s/overlays/dev/server-replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fca-client-deployment
spec:
  replicas: 1
