k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fca-ingress
  namespace: fca-dev
spec:
  rules:
  - host: app.local
